Update install spark